--- a/templates/results.html
+++ b/templates/results.html
@@ -14,7 +14,7 @@
 <input 
     checked="true" 
     class="filter" 
-    data-prefix-id="_default-" 
+    data-suffix-id="{{ race.name }}" 
     data-test-result="{{ type }}" 
     hidden="true" 
     name="filter_checkbox" 
@@ -30,7 +30,7 @@
 {{ checkbox('xfailed', model_set.n_xfail) }},
 {{ checkbox('xpassed', model_set.n_xpass) }}
 
-<table class="results-table" id="_default-results-table">
+<table class="results-table" id="results-table-{{ race.name }}">
     <thead id="_default-results-table-head">
         <tr>
             <th class="sortable result initial-sort" col="result">Result</th>
@@ -38,7 +38,7 @@
             <th class="sortable numeric" col="duration">Duration</th>
             <th>Links</th>
         </tr>
-        <tr hidden="true" id="_default-not-found-message">
+        <tr hidden="true" id="not-found-message{{ race.name }}">
             <th colspan="4">No results found. Try to check the filters</th>
         </tr>
     </thead>
