--- a/static/style.css
+++ b/static/style.css
@@ -43,23 +43,49 @@ table {
 /******************************
  * TEST RESULT COLORS
  ******************************/
-span.passed, .passed .col-result {
+span.passed, .passed .col-result, .summary-result.passed {
 	color: green;
 }
 span.skipped, span.xfailed, span.rerun, .skipped .col-result, .xfailed .col-result, .rerun .col-result {
 	color: orange;
 }
-span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, .xpassed .col-result  {
+span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, .xpassed .col-result, .summary-result.failed {
 	color: red;
 }
 
+/******************************
+ * SUMMARY TABLE
+ *
+ * 1. Table Layout
+ * 2. Extra
+ * 3. Sorting items
+ *
+ ******************************/
+
+/*------------------
+ * 1. Table Layout
+ *------------------*/
+
+.summary-table {
+	border: 1px solid #e6e6e6;
+	color: #999;
+	font-size: 12px;
+}
+
+.summary-table th {
+	font-weight: bold
+}
+
+.summary-table th, .summary-table td {
+	padding: 5px;
+	border: 1px solid #E6E6E6;
+	text-align: left
+}
 
 /******************************
  * RESULTS TABLE
  *
  * 1. Table Layout
- * 2. Extra
- * 3. Sorting items
  *
  ******************************/
 
@@ -79,6 +105,7 @@ span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, 
 	border: 1px solid #E6E6E6;
 	text-align: left
 }
+
 .results-table th {
 	font-weight: bold
 }
