--- a/static/style.css
+++ b/static/style.css
@@ -43,13 +43,13 @@ table {
 /******************************
  * TEST RESULT COLORS
  ******************************/
-span.passed, .passed .col-result, .summary-result.passed {
+span.passed, .passed .col-result, .passed .summary-result {
 	color: green;
 }
 span.skipped, span.xfailed, span.rerun, .skipped .col-result, .xfailed .col-result, .rerun .col-result {
 	color: orange;
 }
-span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, .xpassed .col-result, .summary-result.failed {
+span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, .xpassed .col-result, .failed .summary-result {
 	color: red;
 }
 
@@ -66,10 +66,8 @@ span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, 
  * 1. Table Layout
  *------------------*/
 
-.summary-table {
-	border: 1px solid #e6e6e6;
-	color: #999;
-	font-size: 12px;
+.results-table.summary-table {
+	width: auto;
 }
 
 .summary-table th {
@@ -79,7 +77,7 @@ span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, 
 .summary-table th, .summary-table td {
 	padding: 5px;
 	border: 1px solid #E6E6E6;
-	text-align: left
+	text-align: left;
 }
 
 /******************************
