--- a/templates/results.html
+++ b/templates/results.html
@@ -9,7 +9,7 @@
 <table class="results-table summary-table">
     <tr>
         <th>Model</th>
-        <th>All Pass?</th>
+        <th>Pass %</th>
         <th>Total Passed Tests</th>
         <th>Total Failed Tests</th>
     </tr>
@@ -17,9 +17,9 @@
     {% for model_set in race.model_sets -%}
     <tr class="results-table-row">
         <td onclick="scroll_to_model(this)" class="{{ race.name }} scroller">{{ model_set.name }}</td>
-        <td class="summary-result {{ model_set.all_pass }}">{{ model_set.all_pass }}</td>
-        <td class="summary-result True">{{ model_set.n_passed }}</td>
-        <td class="summary-result False">{{ model_set.n_failed }}</td>
+        <td class="summary-result rel_pass">{{ model_set.rel_pass }}</td>
+        <td class="summary-result">{{ model_set.n_passed }}</td>
+        <td class="summary-result">{{ model_set.n_failed }}</td>
     </tr>
     {%- endfor %}
 
@@ -50,7 +50,7 @@
 {{ checkbox('xfailed', model_set.n_xfail) }},
 {{ checkbox('xpassed', model_set.n_xpass) }}
 
-<table class="results-table {{ model_set.name }}-{{ race.name }} scroller" id="results-table-{{ race.name }}">
+<table class="results-table {{ model_set.name }}-{{ race.name }}" id="results-table-{{ race.name }}">
     <thead id="_default-results-table-head">
         <tr>
             <th class="sortable result initial-sort" col="result">Result</th>
