--- a/static/style.css
+++ b/static/style.css
@@ -46,10 +46,10 @@ table {
 span.passed, .passed .col-result, .passed.summary-result {
 	color: green;
 }
-span.skipped, span.xfailed, span.rerun, .skipped .col-result, .xfailed .col-result, .rerun .col-result {
+span.skipped, span.xfailed, span.rerun, .skipped .col-result, .xfailed .col-result, .rerun .col-result, .close-to-pass {
 	color: orange;
 }
-span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, .xpassed .col-result, .summary-result.failed {
+span.error, span.failed, span.xpassed, .error .col-result, .failed .col-result, .xpassed .col-result, .summary-result.failed:not(.close-to-pass) {
 	color: red;
 }
 
